框架搭建 1. 增加yml 2. 增加端口规则，并在readme中进行说明 3. 增加 eureka 相关依赖 #2

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
     <!--所有子pom中直接继承使用-->
     <dependencies>
 
+        <!--#############################################-->
+        <!--#                                           #-->
+        <!--#    Spring Cloud starter-config            #-->
+        <!--#                                           #-->
+        <!--#############################################-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
