--- a/wikl-orientdb/orientdb-jdbc/pom.xml
+++ b/wikl-orientdb/orientdb-jdbc/pom.xml
@@ -13,4 +13,17 @@
     <artifactId>orientdb-jdbc</artifactId>
 
 
+    <dependencies>
+        <!--#############################################-->
+        <!--#                                           #-->
+        <!--#    Spring Cloud Eureka Client             #-->
+        <!--#                                           #-->
+        <!--#############################################-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+    </dependencies>
+
 </project>
