--- a/wikl-orientdb/orientdb-gremlin/src/main/resources/application.yml
+++ b/wikl-orientdb/orientdb-gremlin/src/main/resources/application.yml
@@ -1,1 +1,13 @@
+server:
+  port: 8763
 
+spring:
+  application:
+    name: orientdb-gremlin
+
+eureka:
+  client:
+    service-url: http://localhost:8761/eureka/
+  # 这只为prefer ip的话可以直接展示ip地址
+  instance:
+    prefer-ip-address: true
