--- a/wikl-orientdb/orientdb-gremlin/pom.xml
+++ b/wikl-orientdb/orientdb-gremlin/pom.xml
@@ -13,4 +13,25 @@
     <artifactId>orientdb-gremlin</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>orientdb-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
+
+
 </project>
