智能油田 1.修改工程的依赖关系 #13

--- a/wikl-common/neo4j-common/neo4j-entity/pom.xml
+++ b/wikl-common/neo4j-common/neo4j-entity/pom.xml
@@ -12,4 +12,21 @@
 
     <artifactId>neo4j-entity</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
