--- a/wikl-neo4j/neo4j-jdbc/pom.xml
+++ b/wikl-neo4j/neo4j-jdbc/pom.xml
@@ -12,5 +12,27 @@
 
     <artifactId>neo4j-jdbc</artifactId>
 
+    <dependencies>
+        
+    <!--===================================公共模块===============================-->
+    <dependency>
+        <groupId>top.wikl</groupId>
+        <artifactId>neo4j-entity</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
 
+    <dependency>
+        <groupId>top.wikl</groupId>
+        <artifactId>neo4j-utils</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+</dependencies>
+<build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
