--- a/wikl-orientdb/orientdb-gremlin/pom.xml
+++ b/wikl-orientdb/orientdb-gremlin/pom.xml
@@ -31,7 +31,28 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--=======================================公共模块========================================-->
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>orientdb-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>orientdb-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
