--- a/wikl-common/orientdb-common/orientdb-entity/pom.xml
+++ b/wikl-common/orientdb-common/orientdb-entity/pom.xml
@@ -17,8 +17,8 @@
     <dependencies>
         <dependency>
             <groupId>com.orientechnologies</groupId>
-            <artifactId>orientdb-jdbc</artifactId>
-            <version>2.2.37</version>
+            <artifactId>orientdb-client</artifactId>
+            <version>3.0.18</version>
 
             <exclusions>
                 <exclusion>
@@ -59,26 +59,12 @@
             </exclusions>
         </dependency>
 
+        <!--################### 公共模块 ##############-->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>top.wikl</groupId>
+            <artifactId>common-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-
-        <!--lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
     </dependencies>
 </project>
