--- a/wikl-orientdb/orientdb-jdbc/pom.xml
+++ b/wikl-orientdb/orientdb-jdbc/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!--=======================================公共模块========================================-->
         <dependency>
             <groupId>top.wikl</groupId>
