--- a/wikl-portal/pom.xml
+++ b/wikl-portal/pom.xml
@@ -13,6 +13,14 @@
     <name>wikl-portal</name>
     <description>Demo project for Spring Boot</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
