WiklGraph 1. 增加oriendb-jdbc 模块基础方法 2. 增加 neo4j-jdbc 模块增加基础方法 #25

--- a/wikl-common/neo4j-common/neo4j-entity/pom.xml
+++ b/wikl-common/neo4j-common/neo4j-entity/pom.xml
@@ -23,5 +23,17 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
+        <!--neo4j-->
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
