--- a/wikl-common/orientdb-common/orientdb-utils/pom.xml
+++ b/wikl-common/orientdb-common/orientdb-utils/pom.xml
@@ -20,6 +20,13 @@
             <artifactId>orientdb-entity</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>common-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
