--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>wikl-common/wikl-exception</module>
         <module>wikl-cloud</module>
         <module>wikl-cloud/wikl-eureka</module>
+        <module>wikl-common/common-util</module>
     </modules>
 
     <properties>
