--- a/wikl-common/common-entity/pom.xml
+++ b/wikl-common/common-entity/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
         <!--lru依赖-->
         <dependency>
             <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
