--- a/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
+++ b/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
@@ -6,6 +6,11 @@ server:
 spring:
   application:
     name: orientdb-jdbc
+  servlet:
+    multipart:
+      #springboot 2.1 后增加 DataSize ,用来避免数据曝光
+      max-file-size: 104857600
+      max-request-size: 524288000
 
 #存储相关的配置
 storage:
