--- a/wikl-janusgraph/src/main/resources/application.yml
+++ b/wikl-janusgraph/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 8764
   servlet:
-    context-path: /neo4j-jdbc
+    context-path: /janusgraph
 
 spring:
   application:
-    name: neo4j-jdbc
+    name: janusgraph
   servlet:
     multipart:
       #springboot 2.1 后增加 DataSize ,用来避免数据曝光
@@ -14,10 +14,8 @@ spring:
 
 #存储相关配置
 storage:
-  neo4j:
-    url: bolt://10.0.43.151:7687
-    userName: neo4j
-    password: 123456
+  janusgraph:
+    url: cql:10.0.41.36
 
 ## 注册的服务地址 和Eureka Server一样
 eureka:
