--- a/wikl-common/orientdb-common/orientdb-entity/pom.xml
+++ b/wikl-common/orientdb-common/orientdb-entity/pom.xml
@@ -15,10 +15,10 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-client</artifactId>
-            <version>3.0.18</version>
+            <version>3.0.27</version>
 
             <exclusions>
                 <exclusion>
@@ -32,6 +32,12 @@
                 </exclusion>
 
             </exclusions>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-jdbc</artifactId>
+            <version>3.0.27</version>
         </dependency>
 
         <dependency>
@@ -43,7 +49,7 @@
         <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-gremlin</artifactId>
-            <version>3.0.18</version>
+            <version>3.0.27</version>
 
             <exclusions>
                 <exclusion>
