--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+            <version>2.1.3.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -115,6 +116,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.1.2.RELEASE</version>
         </dependency>
 
         <!--json-->
@@ -148,43 +150,42 @@
 
     <!--[注意] 最新的spring cloud的包可能还没有在maven上，所以配置spring的仓库download最新的包-->
     <repositories>
-        <repository>
+  <!--      <repository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
             <url>https://repo.spring.io/libs-milestone</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-        </repository>
-        <!--<repository>
+        </repository>-->
+        <repository>
             <id>nexus-aliyun</id>
-            <name>Nexus aliyun</name>
-            <layout>default</layout>
-            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <name>nexus-aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository>-->
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
 
-        <repository>
-            <id>Central Repository</id>
+<!--        <repository>
+            <id>maven Repository</id>
             <name>Central Repository</name>
             <url>https://mvnrepository.com</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <!--        <repository>
-                    <id>Central Repository</id>
-                    <name>Central Repository</name>
-                    <url>http://central.maven.org/maven2/</url>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
-                </repository>-->
+        <repository>
+            <id>Central Repository</id>
+            <name>Central Repository</name>
+            <url>http://central.maven.org/maven2/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>-->
     </repositories>
 
 </project>
