--- a/wikl-common/common-util/pom.xml
+++ b/wikl-common/common-util/pom.xml
@@ -28,6 +28,15 @@
             <version>5.1.9.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
 
     </dependencies>
 
