--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
-            <version>2.1.3.RELEASE</version>
+            <!--<version>2.1.3.RELEASE</version>-->
         </dependency>
 
         <dependency>
