--- a/pom.xml
+++ b/pom.xml
@@ -24,19 +24,20 @@
         <module>wikl-orientdb/orientdb-jdbc</module>
         <module>wikl-orientdb/orientdb-gremlin</module>
         <module>wikl-common</module>
-        <module>wikl-common/neo4j-common</module>
-        <module>wikl-common/neo4j-common/neo4j-entity</module>
-        <module>wikl-common/neo4j-common/neo4j-utils</module>
-        <module>wikl-common/orientdb-common</module>
-        <module>wikl-common/orientdb-common/orientdb-entity</module>
-        <module>wikl-common/orientdb-common/orientdb-utils</module>
+        <module>wikl-common/common-neo4j</module>
+        <module>wikl-common/common-neo4j/neo4j-entity</module>
+        <module>wikl-common/common-neo4j/neo4j-utils</module>
+        <module>wikl-common/common-orientdb</module>
+        <module>wikl-common/common-orientdb/orientdb-entity</module>
+        <module>wikl-common/common-orientdb/orientdb-utils</module>
         <module>wikl-common/common-entity</module>
-        <module>wikl-common/wikl-exception</module>
+        <module>wikl-common/common-exception</module>
         <module>wikl-cloud</module>
         <module>wikl-cloud/wikl-eureka</module>
         <module>wikl-common/common-util</module>
         <module>wikl-janusgraph</module>
         <module>wikl-component</module>
+        <module>wikl-java</module>
     </modules>
 
     <properties>
@@ -148,13 +149,25 @@
 
     </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
