--- a/wikl-neo4j/neo4j-jdbc/pom.xml
+++ b/wikl-neo4j/neo4j-jdbc/pom.xml
@@ -35,7 +35,7 @@
 
         <dependency>
             <groupId>top.wikl</groupId>
-            <artifactId>wikl-exception</artifactId>
+            <artifactId>common-exception</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
