--- a/wikl-orientdb/orientdb-jdbc/pom.xml
+++ b/wikl-orientdb/orientdb-jdbc/pom.xml
@@ -50,7 +50,7 @@
 
         <dependency>
             <groupId>top.wikl</groupId>
-            <artifactId>wikl-exception</artifactId>
+            <artifactId>common-exception</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
