--- a/wikl-common/common-exception/pom.xml
+++ b/wikl-common/common-exception/pom.xml
@@ -11,13 +11,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common-exception</artifactId>
-
     <dependencies>
         <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>8.5.40</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
     </dependencies>
-
 </project>
