--- a/wikl-component/src/main/resources/application.yml
+++ b/wikl-component/src/main/resources/application.yml
@@ -12,17 +12,6 @@ spring:
       max-file-size: 104857600
       max-request-size: 524288000
 
-#存储相关的配置
-storage:
-  #orientdb setting
-  orientdb:
-    #    url: remote:10.0.47.59/kngraphIndex;10.0.47.60/kngraphIndex;10.0.47.61/kngraphIndex
-    jdbcurl: remote:10.0.47.51
-    url: remote:10.0.47.51/orientdb_3_1_dev
-    database: orientdb_3_1_dev
-    username: root
-    password: password
-
 eureka:
   client:
     service-url: http://localhost:8761/eureka/
@@ -31,7 +20,7 @@ eureka:
     prefer-ip-address: true
 
 # 日志配置
-logging:
-  level: debug
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+#logging:
+#  level: debug
+#  pattern:
+#    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
