--- a/wikl-common/common-util/pom.xml
+++ b/wikl-common/common-util/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
     </dependencies>
 
