--- a/wikl-orientdb/orientdb-gremlin/pom.xml
+++ b/wikl-orientdb/orientdb-gremlin/pom.xml
@@ -39,6 +39,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>wikl-java</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
