--- a/wikl-component/pom.xml
+++ b/wikl-component/pom.xml
@@ -107,6 +107,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baidu.aip</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
