WiklGraph 1. 修改 【wikl-scala】 模块

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>wikl-janusgraph</module>
         <module>wikl-component</module>
         <module>wikl-java</module>
+        <module>wikl-scala</module>
     </modules>
 
     <properties>
