--- a/wikl-scala/src/main/resources/application.yml
+++ b/wikl-scala/src/main/resources/application.yml
@@ -12,16 +12,9 @@ spring:
       max-file-size: 104857600
       max-request-size: 524288000
 
-#存储相关配置
-storage:
-  janusgraph:
-    url: cql:10.0.41.36
-
-## 注册的服务地址 和Eureka Server一样
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    service-url: http://localhost:8761/eureka/
   # 这只为prefer ip的话可以直接展示ip地址
   instance:
     prefer-ip-address: true
