--- a/wikl-component/src/main/resources/application.yml
+++ b/wikl-component/src/main/resources/application.yml
@@ -12,6 +12,20 @@ spring:
       max-file-size: 104857600
       max-request-size: 524288000
 
+# 图谱生成配置，1：生成概念图 2：生成实例图  3：概念和实例
+graph:
+  special:
+    # 特殊处理开关  true 开启； false 不开启
+    open: true
+    hostIP: 10.0.43.91
+    userName: ztshare
+    passWord: ztshare
+    filePath: /share/夏亚岭/
+    graphIds: {982: {1,主键Id},991: {1,主键Id}}
+#    graphIds:
+#    - 982
+#    - 991
+
 eureka:
   client:
     service-url: http://localhost:8761/eureka/
