--- a/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
+++ b/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
@@ -11,15 +11,37 @@ spring:
       #springboot 2.1 后增加 DataSize ,用来避免数据曝光
       max-file-size: 104857600
       max-request-size: 524288000
+  datasource:
+    url: jdbc:mysql://10.0.47.52:3306/bmsmartkg?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+    username: root
+    password: Bmsmart2017
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 10
+    maxIdle: 15
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    maxOpenPreparedStatements: 5
+    removeAbandoned: true
+    removeAbandonedTimeout: 1800
+    logAbandoned: true
+    type: com.alibaba.druid.pool.DruidDataSource
 
 #存储相关的配置
 storage:
   #orientdb setting
   orientdb:
     #    url: remote:10.0.47.59/kngraphIndex;10.0.47.60/kngraphIndex;10.0.47.61/kngraphIndex
-    jdbcurl: remote:10.0.43.101
-    url: remote:10.0.43.101/xyl
-    database: xyl
+    jdbcurl: remote:10.0.43.100
+    url: remote:10.0.43.1010/orientdb_gw_db
+    database: orientdb_gw_db
     username: root
     password: password
 
