--- a/wikl-scala/pom.xml
+++ b/wikl-scala/pom.xml
@@ -13,5 +13,12 @@
     <artifactId>wikl-scala</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
