--- a/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
+++ b/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
       max-file-size: 104857600
       max-request-size: 524288000
   datasource:
-    url: jdbc:mysql://10.0.47.52:3306/bmsmartkg?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
-    username: root
-    password: Bmsmart2017
+    url: jdbc:mysql://10.0.50.150:53306/bmsmartkg?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+    username: admin
+    password: Bmzt2016_mysql
     driver-class-name: com.mysql.jdbc.Driver
     filters: stat
     maxActive: 20
@@ -39,11 +39,11 @@ storage:
   #orientdb setting
   orientdb:
     #    url: remote:10.0.47.59/kngraphIndex;10.0.47.60/kngraphIndex;10.0.47.61/kngraphIndex
-    jdbcurl: remote:10.0.43.100
-    url: remote:10.0.43.1010/orientdb_gw_db
+    jdbcurl: remote:10.0.50.150:52424
+    url: remote:10.0.50.150:52424/orientdb_gw_db
     database: orientdb_gw_db
     username: root
-    password: password
+    password: Bmzt2016_orientdb
 
 eureka:
   client:
