--- a/wikl-component/pom.xml
+++ b/wikl-component/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>top.wikl</groupId>
             <artifactId>orientdb-entity</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -56,6 +61,12 @@
         <dependency>
             <groupId>top.wikl</groupId>
             <artifactId>wikl-exception</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>common-entity</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
@@ -128,6 +139,13 @@
             <groupId>com.jacob</groupId>
             <artifactId>jacob</artifactId>
             <version>1.10</version>
+        </dependency>
+
+        <!-- retrofit -->
+        <dependency>
+            <groupId>com.squareup.retrofit</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>1.9.0</version>
         </dependency>
 
     </dependencies>
