WiklGraph 1. 修改依赖 2. 增加elk模块

--- a/wikl-common/common-exception/pom.xml
+++ b/wikl-common/common-exception/pom.xml
@@ -12,9 +12,22 @@
 
     <artifactId>common-exception</artifactId>
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>common-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
