--- a/wikl-java/src/main/resources/application.yml
+++ b/wikl-java/src/main/resources/application.yml
@@ -1,21 +1,16 @@
 server:
   port: 8767
   servlet:
-    context-path: /java
+    context-path: /wikl-java
 
 spring:
   application:
-    name: java
+    name: wikl-java
   servlet:
     multipart:
       #springboot 2.1 后增加 DataSize ,用来避免数据曝光
       max-file-size: 104857600
       max-request-size: 524288000
-
-#存储相关配置
-storage:
-  janusgraph:
-    url: cql:10.0.41.36
 
 ## 注册的服务地址 和Eureka Server一样
 eureka:
