--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.1.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>top.wikl</groupId>
@@ -23,6 +23,7 @@
         <module>wikl-orientdb</module>
         <module>wikl-orientdb/orientdb-jdbc</module>
         <module>wikl-orientdb/orientdb-gremlin</module>
+        <module>wikl-orientdb/orientdb-spark</module>
         <module>wikl-common</module>
         <module>wikl-common/common-neo4j</module>
         <module>wikl-common/common-neo4j/neo4j-entity</module>
@@ -39,6 +40,8 @@
         <module>wikl-component</module>
         <module>wikl-java</module>
         <module>wikl-scala</module>
+        <module>wikl-elk</module>
+        <module>wikl-elk/wikl-zipkin</module>
     </modules>
 
     <properties>
@@ -49,7 +52,7 @@
         <lombok.version>1.16.10</lombok.version>
         <fastjson.version>1.2.60</fastjson.version>
         <lru.version>1.4.2</lru.version>
-        <spring.version>5.1.9.RELEASE</spring.version>
+        <spring.version>5.2.4.RELEASE</spring.version>
         <quartz.version>2.3.0</quartz.version>
         <kafka.version>2.4.0</kafka.version>
         <javacsv.version>2.0</javacsv.version>
@@ -85,6 +88,49 @@
                 <version>${lru.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>2.2.5.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-autoconfigure</artifactId>
+                <version>2.2.5.RELEASE</version>
+            </dependency>
+
+            <!--json-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-io</groupId>
+                        <artifactId>commons-io</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!--lombok-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
@@ -97,47 +143,6 @@
         <!--#    Spring Cloud starter-config            #-->
         <!--#                                           #-->
         <!--#############################################-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-            <!--<version>2.1.3.RELEASE</version>-->
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>2.1.2.RELEASE</version>
-        </dependency>
-
-        <!--json-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-io</groupId>
-                    <artifactId>commons-io</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!--lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
