--- a/wikl-elk/pom.xml
+++ b/wikl-elk/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <parent>
@@ -8,6 +8,10 @@
         <artifactId>wiklgraph</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>wikl-orientdb</artifactId>
+    <groupId>top.wikl</groupId>
+    <artifactId>wikl-elk</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>wikl-elk</name>
+    <description>elk</description>
 
 </project>
