'测试neo4j批量导入语句'

--- a/wikl-neo4j/neo4j-jdbc/src/main/resources/application.yml
+++ b/wikl-neo4j/neo4j-jdbc/src/main/resources/application.yml
@@ -17,7 +17,7 @@ storage:
   neo4j:
     url: bolt://localhost:7687
     userName: neo4j
-    password: 123456
+    password: password
 
 ## 注册的服务地址 和Eureka Server一样
 eureka:
