--- a/wikl-neo4j/neo4j-jdbc/pom.xml
+++ b/wikl-neo4j/neo4j-jdbc/pom.xml
@@ -6,13 +6,19 @@
         <groupId>top.wikl</groupId>
         <artifactId>wiklgraph</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>neo4j-jdbc</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!--===================================公共模块===============================-->
         <dependency>
             <groupId>top.wikl</groupId>
