--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.10.RELEASE</version>
+        <version>2.3.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>top.wikl</groupId>
@@ -42,14 +42,17 @@
         <module>wikl-scala</module>
         <module>wikl-elk</module>
         <module>wikl-elk/wikl-zipkin</module>
+        <module>wikl-elk/trace-a</module>
+        <module>wikl-elk/trace-b</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
         <springfox.swagger2.version>2.9.2</springfox.swagger2.version>
+
         <springfox.swagge.ui.version>2.9.2</springfox.swagge.ui.version>
-        <lombok.version>1.16.10</lombok.version>
+        <lombok.version>1.18.16</lombok.version>
         <fastjson.version>1.2.60</fastjson.version>
         <lru.version>1.4.2</lru.version>
         <spring.version>5.2.9.RELEASE</spring.version>
