--- a/wikl-orientdb/orientdb-gremlin/pom.xml
+++ b/wikl-orientdb/orientdb-gremlin/pom.xml
@@ -6,7 +6,7 @@
         <groupId>top.wikl</groupId>
         <artifactId>wiklgraph</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
