--- a/pom.xml
+++ b/pom.xml
@@ -143,11 +143,11 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
 
-        <dependency>
+  <!--      <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
