--- a/wikl-cloud/wikl-config/pom.xml
+++ b/wikl-cloud/wikl-config/pom.xml
@@ -33,6 +33,22 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--配置文件刷新时需要-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-monitor</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
