--- a/wikl-cloud/wikl-eureka/src/main/resources/bootstrap.yml
+++ b/wikl-cloud/wikl-eureka/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
         enabled: false
     config:
       # 解决添加配置中心依赖，但是没有配置中心，或者连不通时，控制台报错问题； true 启用配置中心，false 不启用
-      enabled: true
+      enabled: false
 logging:
   file:
     max-size: 10MB
